Fix TasksList.tsx syntax error and remove unnecessary .md files

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
+  "git": {
+    "deploymentEnabled": {
+      "main": false,
+      "production": true
     }
-  ]
+  },
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "framework": "nextjs"
 }
-
