--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cloudinary": "^2.8.0",
     "firebase": "^10.7.1",
+    "firebase-admin": "^13.6.0",
     "next": "^14.0.4",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
