feat: Chá»‰ bá»‘ máº¹ (Ã´ng bÃ ) má»›i Ä‘Æ°á»£c xÃ³a nhiá»‡m vá»¥ vÃ  Ä‘á»•i text root user thÃ nh bá»‘ máº¹ (Ã´ng bÃ ) - ThÃªm tÃ­nh nÄƒng bulk create & assign tasks - ThÃªm backup .env.local.example

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+.env.local.backup
+# Allow .env.local.example to be committed (template file)
+!.env.local.example
 
 # vercel
 .vercel
